--- a/practice.html
+++ b/practice.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link href="test.css" rel="stylesheet" type="text/css">
+  <link href="practice.css" rel="stylesheet" type="text/css">
   <title>Branching Practice Site </title>
 </head>
 <body>
